# cpr-example

./: .gitignore  CMakeLists.txt  README.md  example.cpp
build_ios/: CMakeLists.txt
build_ios/build.debug/build.arm/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel
build_ios/build.debug/build.arm/cpr-example.build/Debug-iphoneos/ALL_BUILD.build/: Script-8EE1FC2E10B34057A216FEA2.sh  dgph  dgph~
build_ios/build.debug/build.arm/cpr-example.build/Debug-iphoneos/ZERO_CHECK.build/: Script-B860A686880E4F3A8EFB7589.sh  dgph  dgph~
build_ios/build.debug/build.arm/cpr-example.build/Debug-iphoneos/example.build/: dgph  dgph~
build_ios/build.debug/build.arm/cpr-example.build/Debug-iphoneos/example.build/Objects-normal/arm64/: example.LinkFileList
build_ios/build.debug/build.arm/cpr-example.build/Debug-iphoneos/example.build/Objects-normal/armv7/: example.LinkFileList  example.d
build_ios/build.debug/build.arm/cpr-example.build/Debug-iphoneos/example.build/Objects-normal/armv7s/: example.LinkFileList
build_ios/build.debug/build.arm/cpr-example.xcodeproj/: project.pbxproj
build_ios/build.debug/build.arm/opt/cpr/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelWithDebInfo
build_ios/build.debug/build.arm/opt/cpr/cpr.xcodeproj/: project.pbxproj
build_ios/build.debug/build.i386/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelWithDebInfo
build_ios/build.debug/build.i386/cpr-example.build/Debug-iphonesimulator/ALL_BUILD.build/: Script-F3BB067B0A194FCC98ADD6CE.sh  dgph  dgph~
build_ios/build.debug/build.i386/cpr-example.build/Debug-iphonesimulator/ZERO_CHECK.build/: Script-1EC693A87FCB46759FC75EBE.sh  dgph  dgph~
build_ios/build.debug/build.i386/cpr-example.build/Debug-iphonesimulator/example.build/: dgph  dgph~
build_ios/build.debug/build.i386/cpr-example.build/Debug-iphonesimulator/example.build/Objects-normal/i386/: example.LinkFileList
build_ios/build.debug/build.i386/cpr-example.xcodeproj/: project.pbxproj
build_ios/build.debug/build.i386/opt/cpr/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeDebug
build_ios/build.debug/build.i386/opt/cpr/cpr.xcodeproj/: project.pbxproj
build_ios/build.debug/build.x86_64/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease
build_ios/build.debug/build.x86_64/cpr-example.build/Debug-iphonesimulator/ALL_BUILD.build/: Script-CDB5AFE69D8148D9B01E10A6.sh  dgph  dgph~
build_ios/build.debug/build.x86_64/cpr-example.build/Debug-iphonesimulator/ZERO_CHECK.build/: Script-6BF5EDA133A34F61957F6E90.sh  dgph  dgph~
build_ios/build.debug/build.x86_64/cpr-example.build/Debug-iphonesimulator/example.build/: dgph  dgph~
build_ios/build.debug/build.x86_64/cpr-example.build/Debug-iphonesimulator/example.build/Objects-normal/x86_64/: example.LinkFileList
build_ios/build.debug/build.x86_64/cpr-example.xcodeproj/: project.pbxproj
build_ios/build.debug/build.x86_64/opt/cpr/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel
build_ios/build.debug/build.x86_64/opt/cpr/cpr.xcodeproj/: project.pbxproj
opt/: CMakeLists.txt
(+1 files in other folders)
